--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,17 +23,16 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".ui.MainActivity"
-            android:label="@string/title_activity_main">
+            android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".ui.TrackDetailsActivity"
-            android:label="@string/title_activity_track_details"
             android:theme="@style/AppThemeActionBar" />
 
         <service
